force-app/main/default/objects/Credit_Card__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Card__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Visa Clasic</fullName>
            </value>
            <value>
                <fullName>Visa Gold</fullName>
            </value>
            <value>
                <fullName>Master Card</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>