force-app/main/default/objects/Credit_Card__c/fields/Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Month__c</fullName>
    <label>Expiration Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>