force-app/main/default/objects/Credit_Card__c/fields/Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Year__c</fullName>
    <label>Expiration Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>