force-app/main/default/objects/Credit_Card__c/validationRules/Validate_Month_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Month_Year</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Expiration_Month__c &lt; MONTH(TODAY()), Expiration_Year__c &lt; YEAR(TODAY()))</errorConditionFormula>
    <errorMessage>The date can&apos;t be lower than current day</errorMessage>
</ValidationRule>