force-app/main/default/objects/Credit_Card__c/validationRules/ValidateYear.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateYear</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Expiration_Year__c &lt;  YEAR(TODAY()) ,  Expiration_Year__c &gt; YEAR(TODAY())+5)</errorConditionFormula>
    <errorMessage>The year has to be between the current year and current year + 5</errorMessage>
</ValidationRule>