force-app/main/default/objects/Credit_Card__c/validationRules/Validation_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Month</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
  REGEX(Text( Expiration_Month__c ), &quot;([1-9]|1[012])&quot;)
)</errorConditionFormula>
    <errorMessage>It need&apos;s to be a number between 1 and 12</errorMessage>
</ValidationRule>